--- a/src/configs/apix/release_notes.json
+++ b/src/configs/apix/release_notes.json
@@ -1,7 +1,7 @@
 [
 	{
 		"date": "2021-07-28",
-		"itemRelease": "<mat-list><mat-list-item> Pepper </mat-list-item><mat-list-item> Salt </mat-list-item><mat-list-item> Paprika </mat-list-item></mat-list>"
+		"itemRelease": "<ul><li>Coffee</li><li>Milk</li><li>Sugar</li></ul>"
 	},
 	{
 		"date": "2021-07-29",
